fixed padding issue on small mobile for hamburger menu items

--- a/partials/_mediaQueries.scss
+++ b/partials/_mediaQueries.scss
@@ -341,7 +341,6 @@
 @media screen and (min-width: 300px) and (max-width: 450px) {
 	.menu ul a {
 		font-size: 4rem;
-		padding: 20px;
 	}
 	.exitResponsive {
 		margin-left: 10%;
