--- a/styles/style.css
+++ b/styles/style.css
@@ -1229,7 +1229,6 @@ footer a:hover {
 @media screen and (min-width: 300px) and (max-width: 450px) {
   .menu ul a {
     font-size: 4rem;
-    padding: 20px;
   }
   .exitResponsive {
     margin-left: 10%;
